<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.pixel.toctalk.ui.home.fragment.account.EditAccountViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/blue_wave"
        android:paddingHorizontal="32dp"
        tools:context=".ui.auth.fragment.register.RegisterFragment">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/open_pic"
            android:layout_width="182dp"
            android:layout_height="182dp"
            android:layout_marginTop="64dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/click_to_select_a_photo"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@{vm.userNewPic}"
            app:imageUrl="@{vm.userCurrentPic}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/CircularPhoto"
            app:strokeColor="@color/very_light_blue"
            app:strokeWidth="8dp"
            tools:src="@tools:sample/avatars" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/change_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:elevation="8dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_edit_photo"
            app:layout_constraintBottom_toBottomOf="@id/open_pic"
            app:layout_constraintEnd_toEndOf="@id/open_pic"
            app:shapeAppearanceOverlay="@style/CircularPhoto" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginTop="64dp"
            android:hint="@string/username"
            android:maxLength="32"
            app:counterEnabled="true"
            app:counterMaxLength="32"
            app:counterOverflowTextColor="@color/gray"
            app:errorMessage="@{vm.usernameError}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/open_pic"
            app:startIconDrawable="@drawable/ic_user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="text"
                android:text="@={vm.usernameLiveData}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_save_changes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:onClick="@{() -> vm.onSaveClick()}"
            app:cardBackgroundColor="@color/white"
            app:contentPaddingBottom="8dp"
            app:contentPaddingLeft="32dp"
            app:contentPaddingRight="32dp"
            app:contentPaddingTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:fontFamily="@font/poppins"
                android:text="@string/save"
                android:textColor="#BDBDBD"
                android:textSize="18sp"
                android:visibility="@{vm.isLoading == true ? View.GONE : View.VISIBLE}" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_arrow"
                android:visibility="@{vm.isLoading == true ? View.GONE : View.VISIBLE}"
                app:tint="#BDBDBD" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:visibility="@{vm.isLoading == true ? View.VISIBLE : View.GONE}"
                app:indicatorColor="@color/light_blue" />
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>